--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -156,7 +156,7 @@
                     <li><a href="products1.html">REPOSITIONABLE MASKING SHEET</a></li>
                     <li><a href="products1.html">VINYL AND PAPER WEEDING SCRAP</a></li>
                     <li><a href="products1.html">REPLACEMENT HOOK PAD FOR DETAIL SANDERS </a></li>
-                    <li><a href="products1.html"><i> SERIES BLADE </i></a></li>
+                    <li><a href="products1.html"> SERIES BLADE </a></li>
                   </ul>
                 </div>
                 <div class="col-sm-2">
