--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -146,9 +146,8 @@
             <img  src="assets/images/3.jpg" alt=" " class="img-responsive" />
           </div>
           <div class="col-md-7 modal_body_right">
-            <h4>The Best Mobile Phone 3GB</h4>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
-              commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+            <h4>The Best Thing in the market</h4>
+            <p>best product in the market right now. only here u can get only on e crafty commerce </p>
             <div class="rating">
               <div class="rating-left">
                 <img  src="assets/images/star-.png" alt=" " class="img-responsive" />
@@ -235,10 +234,8 @@
               <div class="banner-wrap">
                 <div class="w3agile_special_deals_grid_left_grid1">
                   <img  src="assets/images/t1.png" alt=" " class="img-responsive" />
-                  <p>Quis autem vel eum iure reprehenderit qui in ea voluptate 
-                    velit esse quam nihil molestiae consequatur, vel illum qui dolorem 
-                    eum fugiat quo voluptas nulla pariatur</p>
-                  <h4>Laura</h4>
+                  <p>One of the antique piece in market.</p>
+                  <h4>Shubham</h4>
                 </div>
               </div>
             </article>
@@ -246,10 +243,8 @@
               <div class="banner-wrap">
                 <div class="w3agile_special_deals_grid_left_grid1">
                   <img  src="assets/images/t2.png" alt=" " class="img-responsive" />
-                  <p>Quis autem vel eum iure reprehenderit qui in ea voluptate 
-                    velit esse quam nihil molestiae consequatur, vel illum qui dolorem 
-                    eum fugiat quo voluptas nulla pariatur</p>
-                  <h4>Michael</h4>
+                  <p>One of the antique piece in the online market</p>
+                  <h4>Rishab</h4>
                 </div>
               </div>
             </article>
@@ -257,10 +252,8 @@
               <div class="banner-wrap">
                 <div class="w3agile_special_deals_grid_left_grid1">
                   <img  src="assets/images/t3.png" alt=" " class="img-responsive" />
-                  <p>Quis autem vel eum iure reprehenderit qui in ea voluptate 
-                    velit esse quam nihil molestiae consequatur, vel illum qui dolorem 
-                    eum fugiat quo voluptas nulla pariatur</p>
-                  <h4>Rosy</h4>
+                  <p>Best Thing in the market</p>
+                  <h4>Trarun</h4>
                 </div>
               </div>
             </article>
@@ -467,8 +460,8 @@
 <div class="newsletter">
   <div class="container">
     <div class="col-md-6 w3agile_newsletter_left">
-      <h3>Newsletter</h3>
-      <p>Excepteur sint occaecat cupidatat non proident, sunt.</p>
+      <h3>E-Crafty-Commerce</h3>
+      <p>One Place All Solution</p>
     </div>
     <div class="col-md-6 w3agile_newsletter_right">
       <form action="#" method="post">
@@ -506,7 +499,7 @@
       <div class="col-md-3 w3_footer_grid">
         <h3>Category</h3>
         <ul class="info"> 
-          <li><a href="products.html">Crafty Cloths</a></li>
+          <li><a href="products.html">Crafty Cloth</a></li>
           <li><a href="products1.html">Crafty Home appliance</a></li>
           <li><a href="products.html">Crafty Home DECORATION</a></li>
           
@@ -538,7 +531,7 @@
       </div>
     </div>
     <div class="container">
-      <p>E-crafty commerce Design by-Shubham,Swetha,Vijay,Neerja,Rishab,Varun <a href="http://w3layouts.com/">W3layouts</a></p>
+      <p>E-crafty commerce Design by--Shubham,Swetha,Vijay,Neerja,Rishab,Varun <a href="http://w3layouts.com/">W3layouts</a></p>
     </div>
   </div>
 </div>
@@ -547,6 +540,10 @@
 <script src="assets/js/minicart.js"></script>
 <script>
       w3ls.render();
+
+
+
+
 
       w3ls.cart.on('w3sb_checkout', function (evt) {
         var items, len, i;
