--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -58,7 +58,7 @@
         
     </div>	
 </div>
-<!-- //web icons -->   
+   
 <!-- newsletter -->
 <div class="newsletter">
     <div class="container">
@@ -75,14 +75,14 @@
         <div class="clearfix"> </div>
     </div>
 </div>
-<!-- //newsletter -->
+
 <!-- footer -->
 <div class="footer">
     <div class="container">
         <div class="w3_footer_grids">
             <div class="col-md-3 w3_footer_grid">
                 <h3>Contact</h3>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+                <p>E commerce one place all solution .</p>
                 <ul class="address">
                     <li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Cannught place <span>New Delhi.</span></li>
                     <li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">Shubhamsingh@123.com</a></li>
